Mercury internal abstraction layer performance regression expected